# dango

./: .editorconfig  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: pr.yml
src/: App.tsx  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dependencies.rs  main.rs
src-tauri/src/dependencies/: note.rs  notes.rs  plugins.rs
src-tauri/src/dependencies/plugins/: github.rs  slack.rs  trello.rs
src-tauri/src/relations/: note.rs  notes.rs  plugins.rs
src-tauri/src/relations/plugins/: github.rs  trello.rs
src/interface/: ConfigRecord.tsx  ConfigRecordGroup.tsx  NoteCard.tsx  NoteContainer.tsx  PreferenceDialog.tsx
src/models/: Config.ts  GithubPlugin.ts  Note.ts  Plugin.ts  Plugins.ts  SlackPlugin.ts  TrelloPlugin.ts
src/notes/: Note.ts
