[package]
name = "dango"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-rs = "0.7"
serde_json = "1.0"
dotenv = "0.15"
json = "0.12"
linkify = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "0.1"
slack = "0.25.0"
